src/test/deca/syntax/invalid/bge_bge_invalid_syntax.deca
// Description : 
// 
//      Test syntaxiquement incorrect qui ne reconnaît "=>" 
// 
// Resultat : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    =>;
}
